2005-05-30
  
  *  Corrected return types (where necessary) for the functions that make up the
     devices[] array initialised in src/frontend/display.c, and used specific
     #includes rather than extern references. Added new headers as required.
     
  *  Moved jbuf from src/main.c to src/frontend/signal_handler.c 
  
  *  Tidy up of the header files in src/frontend and sub-directories. Motivation
     is to remove extern declarations within .c files and place in .h files. New
     header files where necessary.

2005-05-28  Steven Borley <steven.borley@virgin.net>

  *  Fix bug introduced in my last change. Fix supplied by Hitoshi Tanaka.
     Bug can cause a segmentation fault.
     
  *  Fixed the format of section 5.3.37. Save* in src/ngsoice.txt
  
  *  In src/frontend/plotting replaced extern references in .c files wiith
     #include of suitable header files.
    
  *  Added src/frontend/numparam/numpaif.h for the external interface to the
     numparam library.

2005-05-26  Steven Borley <steven.borley@virgin.net>

  *  Fixed bug with define (see bug reference [ 999546 ] 'define' is broken 
     in ngspice-15).
     
  *  Fixed bug with 'plot title title_name' (see bug [ 557638 ] plot 
     segmentation fault).

2005-05-23  Steven Borley <steven.borley@virgin.net>

  *  Fixed a divide-by-zero bug in the MOS level=2 device model
     the fix was supplied by Hitoshi Tanaka.
     
  *  Fixed a 'core-dump' that could be caused by the interactive 'write' command
     when the plot contains more than one dimension. This was due to improper
     use of a buffer in rawfile.c as pointed out by Dietmar Warning. Bug also
     affected ngsconvert.

2005-05-22  Steven Borley <steven.borley@virgin.net>

  *  src/frontend/numparam/mystring.c - fix for MinGW from Hitoshi Tanaka.

  *  various files - removal of more warning due to unused varaiables

2005-05-21  Steven Borley <steven.borley@virgin.net>
